--- a/demo.ipynb
+++ b/demo.ipynb
@@ -623,7 +623,20 @@
    "id": "76e796b9",
    "metadata": {},
    "source": [
-    "Now there you have it, a text generation model working in ONNX Runtime GenAI."
+    "## Summary\n",
+    "\n",
+    "Congratulations! You have successfully completed the journey of exporting a Hugging Face transformers model to ONNX and running it with ONNX Runtime GenAI. Here's what you accomplished:\n",
+    "\n",
+    "### Key Steps Completed:\n",
+    "1. **Model Preparation**: Modified the Gemma-3 model to be torch.export friendly by implementing custom attention functions that avoid non-exportable operations like `vmap`\n",
+    "2. **Export Setup**: Created proper example inputs with dynamic shapes and defined input/output names for the ONNX export process\n",
+    "3. **Model Wrapping**: Wrapped the transformers model to have a clean tensor-based interface suitable for ONNX export\n",
+    "4. **ONNX Export**: Successfully exported the model using `torch.onnx.export` with opset version 20 for optimal ONNX Runtime compatibility\n",
+    "5. **Optimization**: Applied ONNX Runtime-specific fusion optimizations to improve performance\n",
+    "6. **Integration**: Loaded the exported model in ONNX Runtime GenAI and demonstrated text generation capabilities\n",
+    "\n",
+    "### Next Steps:\n",
+    "- For even better performance, consider quantizing the model using tools like Olive\n"
    ]
   }
  ],
