--- a/demo.ipynb
+++ b/demo.ipynb
@@ -24,10 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "1668c90d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniconda/base/envs/onnx/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1a71270e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "01266f92",
    "metadata": {},
    "outputs": [],
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "33761c47",
    "metadata": {},
    "outputs": [],
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a3302b78",
    "metadata": {},
    "outputs": [],
@@ -285,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2fbdb35c",
    "metadata": {},
    "outputs": [
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "d45fc03c",
    "metadata": {},
    "outputs": [],
@@ -360,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "5c4e1509",
    "metadata": {},
    "outputs": [
@@ -368,7 +377,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W1017 18:18:30.480000 39604 site-packages/torch/onnx/_internal/exporter/_registration.py:107] torchvision is not installed. Skipping torchvision::nms\n"
+      "W1017 18:52:56.245000 41280 site-packages/torch/onnx/_internal/exporter/_registration.py:107] torchvision is not installed. Skipping torchvision::nms\n"
      ]
     },
     {
@@ -378,8 +387,13 @@
       "[torch.onnx] Obtain model graph for `TextGenerationModelWrapper([...]` with `torch.export.export(..., strict=False)`...\n",
       "[torch.onnx] Obtain model graph for `TextGenerationModelWrapper([...]` with `torch.export.export(..., strict=False)`... ✅\n",
       "[torch.onnx] Run decomposition...\n",
+      "[torch.onnx] Obtain model graph for `TextGenerationModelWrapper([...]` with `torch.export.export(..., strict=False)`... ✅\n",
+      "[torch.onnx] Run decomposition...\n",
       "[torch.onnx] Run decomposition... ✅\n",
       "[torch.onnx] Translate the graph into ONNX...\n",
+      "[torch.onnx] Run decomposition... ✅\n",
+      "[torch.onnx] Translate the graph into ONNX...\n",
+      "[torch.onnx] Translate the graph into ONNX... ✅\n",
       "[torch.onnx] Translate the graph into ONNX... ✅\n"
      ]
     },
@@ -400,6 +414,7 @@
      "output_type": "stream",
      "text": [
       "Applied 474 of general pattern rewrite rules.\n",
+      "✅ Export successful\n",
       "✅ Export successful\n"
      ]
     }
@@ -430,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c561dc50",
    "metadata": {},
    "outputs": [
@@ -439,7 +454,10 @@
      "output_type": "stream",
      "text": [
       "Optimize the model with ONNX Runtime custom ops...\n",
-      "Applied fusions: {'erf_gelu': 0, 'rms_normalization': 0, 'skip_layer_normalization': 0, 'skip_rms_normalization': 0, 'rotary_embedding': 0, 'cos_sin_cache': 0, 'partial_rotary_embedding': 0, 'sdpa': 0, 'gqa': 0, 'packed_qkv_for_gqa': 0, 'mha1': 0, 'mha2': 0, 'mha_scale': 0, 'mha_bias': 0, 'attention': 0, 'gelu': 0, 'bias_gelu': 0}\n"
+      "Applied 1 of general pattern rewrite rules.\n",
+      "Applied fusions: {'erf_gelu': 0, 'rms_normalization': 157, 'skip_layer_normalization': 0, 'skip_rms_normalization': 52, 'rotary_embedding': 52, 'cos_sin_cache': 52, 'partial_rotary_embedding': 0, 'sdpa': 19, 'gqa': 19, 'packed_qkv_for_gqa': 0, 'mha1': 0, 'mha2': 0, 'mha_scale': 0, 'mha_bias': 0, 'attention': 0, 'gelu': 0, 'bias_gelu': 0}\n",
+      "Applied 1 of general pattern rewrite rules.\n",
+      "Applied fusions: {'erf_gelu': 0, 'rms_normalization': 157, 'skip_layer_normalization': 0, 'skip_rms_normalization': 52, 'rotary_embedding': 52, 'cos_sin_cache': 52, 'partial_rotary_embedding': 0, 'sdpa': 19, 'gqa': 19, 'packed_qkv_for_gqa': 0, 'mha1': 0, 'mha2': 0, 'mha_scale': 0, 'mha_bias': 0, 'attention': 0, 'gelu': 0, 'bias_gelu': 0}\n"
      ]
     }
    ],
@@ -463,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "7d57ac51",
    "metadata": {},
    "outputs": [],
@@ -476,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4a80089b",
    "metadata": {},
    "outputs": [
@@ -515,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "62b36533",
    "metadata": {},
    "outputs": [],
@@ -553,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "9de211d8",
    "metadata": {},
    "outputs": [
@@ -561,30 +579,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output: The sky is blue due to a phenomenon called **Rayleigh scattering**. Here's a breakdown of how it works:\n",
+      "Output: TheThe sky sky is is blue blue due due to to a phenomenon a phenomenon called ** called **RayleighRayleigh scattering**. scattering**. Here' Here's as a breakdown of breakdown of how it how it works: works:\n",
       "\n",
-      "* **Sunlight is made of all colors:** White sunlight is actually a mixture of all the colors of the rainbow – red, orange, yellow, green, blue, indigo, and violet.\n",
+      "*\n",
       "\n",
-      "* **Entering the atmosphere:** When sunlight enters the Earth's atmosphere, it collides with tiny air molecules (mostly nitrogen and oxygen).\n",
+      "* **Sun **Sunlightlight is made is made of all of all colors:** colors:** White White sunlight is sunlight is actually a actually a mixture of mixture of all the all the colors colors of of the the rainbow – rainbow – red, red, orange, orange, yellow, yellow, green, green, blue, blue, indigo, indigo, and violet and violet..\n",
       "\n",
-      "* **Scattering of light:** This collision causes the light to scatter in different directions.▁▁Rayleigh scattering is a type of scattering that's more effective at shorter wavelengths of light.\n",
+      "*\n",
       "\n",
-      "* **Blue light is scattered more:** Blue and violet light have shorter wavelengths than other colors like red and orange.▁▁Because of this, they are scattered much more strongly by the air molecules.▁▁It's like throwing a small pebble (blue light) at a bumpy surface – it bounces in all directions.\n",
+      "* ** **Entering theEntering the atmosphere:** atmosphere:** When When sunlight enters sunlight enters the Earth the Earth''ss atmosphere atmosphere,, it coll it collidesides with with tiny air tiny air molecules ( molecules (mostly nitrogenmostly nitrogen and oxygen and oxygen).\n",
       "\n",
-      "* **Why we see blue, not violet:** While violet light is scattered even *more* than blue, there are a couple of reasons why we see a blue sky instead of a violet one:\n",
-      "▁▁▁▁* **Sunlight emits less violet:** The sun doesn't emit as much violet light as blue light.\n",
-      "▁▁▁▁* **Our eyes are less sensitive to violet:** Human eyes are more sensitive to blue light than violet light.\n",
+      ").\n",
       "\n",
-      "\n",
-      "**In short, the atmosphere scatters blue light more than other colors, making the sky appear blue to our eyes.**\n",
-      "\n",
-      "**Think of it like this:** Imagine throwing a handful of marbles (blue light) and a handful of tennis balls (red light) at a bumpy surface. The marbles are more likely to bounce off in all directions, while the tennis balls are more likely to travel in a straight line.\n",
+      "* *** **ScatteringScattering of of light:** light:** This collision This collision causes the causes the light to light to scatter in scatter in different directions different directions.▁▁.▁▁RayleighRayleigh scattering scattering is a is a type of type of scattering that scattering that''ss more effective more effective at at shorter shorter wavelengths of wavelengths of light. light.\n",
       "\n",
       "\n",
-      "Do you want to learn more about:\n",
       "\n",
-      "*▁▁▁**Why sunsets are red/orange?**\n",
-      "*▁▁▁**How the atmosphere affects the color of clouds?**\n"
+      "** **Blue **Blue light is light is scattered more scattered more:** Blue:** Blue and violet and violet light light have shorter have shorter wavelengths wavelengths than other than other colors like colors like red red and and orange orange.▁▁.▁▁Because ofBecause of this, this, they are they are scattered much scattered much more strongly more strongly by the by the air molecules air molecules..▁▁It▁▁It's's like throwing like throwing a a small pebble small pebble ( (blue lightblue light) at) at a a bumpy surface bumpy surface – it – it bounces in bounces in all directions all directions.\n",
+      "\n",
+      ".\n",
+      "\n",
+      "** ** **WhyWhy we we see see blue blue, not, not violet violet:** While:** While violet violet light light is scattered is scattered even even *more *more* than* than blue, blue, there are there are a couple a couple of reasons of reasons why we why we see see a a blue sky blue sky instead instead of of a violet a violet one: one:\n",
+      "\n",
+      "▁▁▁▁*▁▁▁▁* **Sun **Sunlight emitslight emits less violet less violet:** The:** The sun doesn sun doesn't't emit as emit as much much violet light violet light as blue as blue light. light.\n",
+      "▁▁▁▁\n",
+      "▁▁▁▁** **Our **Our eyes eyes are are less sensitive less sensitive to to violet:** violet:** Human eyes Human eyes are more are more sensitive to sensitive to blue blue light than light than violet light violet light..\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "**In**In short, short, the atmosphere the atmosphere scatters scatters blue light blue light more than more than other colors other colors, making, making the the sky sky appear appear blue to blue to our eyes our eyes.**\n",
+      "\n",
+      ".**\n",
+      "\n",
+      "****Think ofThink of it like it like this:** this:** Imagine throwing Imagine throwing a handful a handful of marbles of marbles ( (blue lightblue light) and) and a a handful of handful of tennis balls tennis balls (red (red light light) at) at a bumpy a bumpy surface. surface. The marbles The marbles are more are more likely likely to bounce to bounce off in off in all directions all directions, while, while the tennis the tennis balls balls are more are more likely to likely to travel travel in in a straight a straight line. line.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Do youDo you want to want to learn learn more about more about:\n",
+      "\n",
+      ":\n",
+      "\n",
+      "*▁▁▁*▁▁▁**Why**Why sunsets are sunsets are red red//orangeorange?**?**\n",
+      "*\n",
+      "*▁▁▁**▁▁▁**How theHow the atmosphere atmosphere affects the affects the color of color of clouds? clouds?**\n",
+      "**\n"
      ]
     }
    ],
@@ -638,6 +680,18 @@
     "### Next Steps:\n",
     "- For even better performance, consider quantizing the model using tools like Olive\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ddb5d3b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4536e4b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
