--- a/demo.ipynb
+++ b/demo.ipynb
@@ -24,10 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "1668c90d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniconda/base/envs/onnx/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1a71270e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "01266f92",
    "metadata": {},
    "outputs": [],
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "33761c47",
    "metadata": {},
    "outputs": [],
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a3302b78",
    "metadata": {},
    "outputs": [],
@@ -285,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2fbdb35c",
    "metadata": {},
    "outputs": [
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "d45fc03c",
    "metadata": {},
    "outputs": [],
@@ -360,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "5c4e1509",
    "metadata": {},
    "outputs": [
@@ -368,7 +377,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W1017 18:18:30.480000 39604 site-packages/torch/onnx/_internal/exporter/_registration.py:107] torchvision is not installed. Skipping torchvision::nms\n"
+      "W1017 18:57:12.658000 41808 site-packages/torch/onnx/_internal/exporter/_registration.py:107] torchvision is not installed. Skipping torchvision::nms\n"
      ]
     },
     {
@@ -430,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c561dc50",
    "metadata": {},
    "outputs": [
@@ -439,7 +448,8 @@
      "output_type": "stream",
      "text": [
       "Optimize the model with ONNX Runtime custom ops...\n",
-      "Applied fusions: {'erf_gelu': 0, 'rms_normalization': 0, 'skip_layer_normalization': 0, 'skip_rms_normalization': 0, 'rotary_embedding': 0, 'cos_sin_cache': 0, 'partial_rotary_embedding': 0, 'sdpa': 0, 'gqa': 0, 'packed_qkv_for_gqa': 0, 'mha1': 0, 'mha2': 0, 'mha_scale': 0, 'mha_bias': 0, 'attention': 0, 'gelu': 0, 'bias_gelu': 0}\n"
+      "Applied 1 of general pattern rewrite rules.\n",
+      "Applied fusions: {'erf_gelu': 0, 'rms_normalization': 157, 'skip_layer_normalization': 0, 'skip_rms_normalization': 52, 'rotary_embedding': 52, 'cos_sin_cache': 52, 'partial_rotary_embedding': 0, 'sdpa': 19, 'gqa': 19, 'packed_qkv_for_gqa': 0, 'mha1': 0, 'mha2': 0, 'mha_scale': 0, 'mha_bias': 0, 'attention': 0, 'gelu': 0, 'bias_gelu': 0}\n"
      ]
     }
    ],
@@ -463,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "7d57ac51",
    "metadata": {},
    "outputs": [],
@@ -476,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4a80089b",
    "metadata": {},
    "outputs": [
@@ -515,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "62b36533",
    "metadata": {},
    "outputs": [],
@@ -553,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "9de211d8",
    "metadata": {},
    "outputs": [
@@ -638,6 +648,18 @@
     "### Next Steps:\n",
     "- For even better performance, consider quantizing the model using tools like Olive\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ddb5d3b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4536e4b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
